--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -577,7 +577,7 @@ HOL_reinforce_divisions:0 "Reinforce our Divisions"
 HOL_reinforce_divisions_desc:0 "With guns, boots, artillery and anti-tank weapons modernised, it is time to apply them to the Veldleger divisions."
 HOL_infantry_focus:0 "Dutch Boots"
 HOL_infantry_focus_desc:0 "Our infantrymen are the bedrock on which our army is based. We must give them all of the support we can so that they aren't forced to march into battle with little more than broomsticks and sandals."
-HOL_machine_guns:0 "새로운 머신건"
+HOL_machine_guns:0 "새로운 기관총"
 HOL_machine_guns_desc:0 "Our machineguns belong in a museum, and it is high time we acquire some new ones!"
 HOL_land_doctrine_mobile:0 "A Mobile Army"
 HOL_land_doctrine_mobile_desc:0 "Our flat land makes mechanised and armoured divisions a no-brainer. By investing further into this area and applying new military doctrine to our army, the Netherlands can become a force to be reckoned with."
@@ -822,10 +822,10 @@ HOL_paternal_autocrat_party:0 "VNH"
 HOL_paternal_autocrat_party_long:0 "국가재건연합"
 HOL_national_populist_party:0 "VNH 극단주의자"
 HOL_national_populist_party_long:0 "국가재건연합"
-HOL_election_social_democrat_party:0 "Lijst Links"
-HOL_election_social_democrat_party_long:0 "Lijst Links"
-HOL_election_social_liberal_party:0 "Lijst Links"
-HOL_election_social_liberal_party_long:0 "Lijst Links"
+HOL_election_social_democrat_party:0 "좌익 연대"
+HOL_election_social_democrat_party_long:0 "좌익 연대"
+HOL_election_social_liberal_party:0 "좌익 연대"
+HOL_election_social_liberal_party_long:0 "좌익 연대"
 HOL_election_authoritarian_democrat_party:0 "CNA-VNH 연정"
 HOL_election_authoritarian_democrat_party_long:0 "CNA-VNH 연정"
 HOL_election_paternal_autocrat_party:0 "CNA-VNH 연정"
@@ -871,13 +871,13 @@ holst.3.t:0 "요르단 폭동"
 holst.3.d:0 "전통적으로 사회주의의 근거지인 암스테르담의 요르단 지구에서 폭력 사태가 일어났습니다.\n\n현 정부의 실업 대책이 불충분하다는 불만은, 아마 생디칼리즘이나 공산주의 단체들이 자극하고 선동한 후, 대중 시위로 발전했습니다. 이 시위는 검은 제복을 입은 여러 무리의 젊은이들이 골목에서 나와 곤봉, 벽돌, 깨진 병을 들고 사람들을 덮치면서 폭동으로 바뀌었습니다.\n\n경찰이 질서를 회복시키지 못하자 시장은 사람들을 해산시키기 위해 몇몇 부대를 소집해야 했습니다."
 holst.3.a:0 "상황이 아주 안 좋군!"
 
-holst.4.t:0 "Lijst Links: The VDB-SDAP Electoral Pact"
-holst.4.d:0 "압도적으로 강력한 우파 세력인 CNA의 형성은 의회와 사회에 충격을 주었습니다. 예상대로 일부 콘크리트 층이 더 작은 종교적 야당으로 옮겼으며, 많은 비주류 정치 평론가들은 이것이 절대 권력을 얻기 위한 필사적인 시도이거나 아니면 죽어가는 사회 시스템의 최후라고 비난했습니다. 그럼에도 불구하고 CNA는 대다수 국민의 지지를 받고 있습니다.\n\n이런 변화에 반응하여 온건 야당은 독자적인 행동을 취했습니다. SDAP는 급진파를 서서히 잃어감에도 불구하고 여전히 CNA 외에서 가장 큰 정당이며 VDB는 자유주의 정책의 주된 초점이 됨으로써 상당히 강해졌지만, 둘다 CNA와 정면 대결을 할 만큼 세가 크지는 않습니다. 이에 따라 자유주의와 사회민주주의, 중도 좌파의 이념을 지키기 위해 VDB와 SDAP는 다음 선거에서 협력을 한다고 발표했습니다.\n\n두 당을 합쳐도 CNA만큼 크지 않을 수도 있지만, CNA가 표심을 잃는 와중에도 기초가 탄탄하다는 장점이 있습니다. 그 둘 모두 좌익 정당이지만 그 둘의 관점은 너무 멀리 떨어져 있어서 CNA가 했던 것처럼 진정으로 통합할 수는 없을 것입니다. 하지만 이 Left List는 투표에서 중간 정도의 승리를 노릴 만하며, 이는 나날이 세를 잃어가는 어색한 우파 정당 연합인 CNA, 또는 VNH나 애국당 같은 극단주의 정당들의 대안을 제시합니다."
-holst.4.a:0 "Mijn hemel!"
+holst.4.t:0 "좌익 연대: VDB-SDAP 선거 동맹"
+holst.4.d:0 "압도적으로 강력한 우파 세력인 CNA의 형성은 의회와 사회에 충격을 주었습니다. 예상대로 일부 콘크리트 층이 더 작은 종교적 야당으로 옮겼으며, 많은 비주류 정치 평론가들은 이것이 절대 권력을 얻기 위한 필사적인 시도이거나 아니면 죽어가는 사회 시스템의 최후라고 비난했습니다. 그럼에도 불구하고 CNA는 대다수 국민의 지지를 받고 있습니다.\n\n이런 변화에 반응하여 온건 야당은 독자적인 행동을 취했습니다. SDAP는 급진파를 서서히 잃어감에도 불구하고 여전히 CNA 외에서 가장 큰 정당이며 VDB는 자유주의 정책의 주된 초점이 됨으로써 상당히 강해졌지만, 둘다 CNA와 정면 대결을 할 만큼 세가 크지는 않습니다. 이에 따라 자유주의와 사회민주주의, 중도 좌파의 이념을 지키기 위해 VDB와 SDAP는 다음 선거에서 협력을 한다고 발표했습니다.\n\n두 당을 합쳐도 CNA만큼 크지 않을 수도 있지만, CNA가 표심을 잃는 와중에도 기초가 탄탄하다는 장점이 있습니다. 그 둘 모두 좌익 정당이지만 그 둘의 관점은 너무 멀리 떨어져 있어서 CNA가 했던 것처럼 진정으로 통합할 수는 없을 것입니다. 하지만 이 좌익 연대는 투표에서 중간 정도의 승리를 노릴 만하며, 이는 나날이 세를 잃어가는 어색한 우파 정당 연합인 CNA, 또는 VNH나 애국당 같은 극단주의 정당들의 대안을 제시합니다."
+holst.4.a:0 "맙소사!"
 
-holst.5.t:0 "Falling Living Standards"
-holst.5.d:0 "Ever since February 3rd, Black Monday, and the collapse of the Berlin Stock Market, the economy of the Netherlands has been suffering. Our reliance on Germany has resulted in many of our workers becoming unemployed as German companies choose to cut jobs in the Netherlands first, spreading syndicalist ideas among the population. As a result the Social Democratic Workers' Party, or SDAP, has been gaining many new members and its political power is increasing. Many of their ideas have merit, but in order to pass them we would have to bring them into the governing coalition - a potentially dangerous option."
-holst.5.a:0 "This does not bode well..."
+holst.5.t:0 "생활 수준의 하락"
+holst.5.d:0 "2월 3일 검은 월요일과 베를린 주식 시장의 붕괴 이후 네덜란드 경제는 어려움을 겪고 있습니다. 독일 기업들이 먼저 네덜란드에서 일자리를 줄이기로 결정함에 따라 독일에 의존하는 우리 노동자들은 실업자가 되어 국민 전체에 생디칼리즘 사상을 퍼트렸습니다. 그 결과, 많은 새로운 당원들이 사회민주노동당, SDAP에 가입하고 있으며 그 당의 정치적 힘은 증가하고 있습니다. 그들의 아이디어 중 많은 것들이 가치가 있지만, 통과시키기 위해서 우리는 그들을 연정에 넣어야 할 것입니다 - 이는 잠재적으로 위험한 선택입니다."
+holst.5.a:0 "좋은 징조가 아니군..."
 
 holst.6.t:0 "기둥의 붕괴"
 holst.6.d:0 "네덜란드 사회는 기둥이라는 오랫동안 분리된 사회 집단으로 고도로 계층화돼 있었습니다. 이 기둥들은 신문사, 방송사, 당, 노조, 농민협회, 은행, 학교, 병원, 대학, 스카우트단, 스포츠 클럽 등 그들만의 사회기관을 가지고 있습니다. 몇몇 회사들은 심지어 특정한 종교나 사상을 가진 사람만을 뽑기도 합니다. 이로 인해 많은 사람들은 그들이 속해있는 기둥 밖의 사람들과 개인적인 접촉을 가지지 않습니다. \n\n하지만 최근 경제 위기로 이 질서가 근본적으로 뒤흔들렸습니다. 경제적인 어려움으로 사회주의 이념이 그 기둥 밖으로 퍼져나가고 있으며, 생디칼리스트와 의회 공산주의자들은 파리에서 흘러나오는 미사여구에 취해 이를 부추기고 있습니다. 동시에, 전통적으로 극우 기둥에 속해있던 많은 청소년들과 실업자들은 자신들이 빼앗기고 버림받았다고 여기고 있으며, 네덜란드 왕국의 안정과 번영을 되찾기 위해 국가 재건 연합(VNH)과 같은 급진 국가주의 정당으로 눈을 돌리고 있습니다."
@@ -885,54 +885,54 @@ holst.6.a:0 "신이시여, 안돼!"
 
 holst.7.t:0 "기독국민동맹의 형성"
 holst.7.d:0 "지난 십여년 동안, 다양한 종교 정당들이 네덜란드 의회의 다수를 차지했습니다. 칼뱅교인 ARP와 CHU, 그리고 가톨릭인 RKSP는 정부에서 대다수를 차지하고 있으며, 대부분의 장관이 여기서 나왔습니다.\n\n하지만 그들은 이제 더이상 그들 각각의 기둥이 무조건적으로 확고한 지지를 보내줄 것이라고 기대할 수 없게 되었습니다. 아직 자신들의 영역에서 우세하기는 하지만, 그들은 극좌와 극우 비주류 운동으로 지지를 잃고 있으며, 심지어 온건한 대중들 사이에서도 좌익자유주의와 사회민주주의에 빠지는 사람들이 늘어나고 있습니다. 이 정당들이 표를 잃으면서, 그들은 이제 그 기둥이 일상생활에서 엄격히 분리되었음에도 불구하고 당의 노선을 지워가면서까지 수십년간 이어진 협동을 이용하려고 하고 있습니다.\n\n기독국민동맹 (CNA)의 설립은 장기적으로 표를 잃을 수도 있지만, 의회 의석의 통합과 대중의 지지로 CNA는 다른 작은 정당보다 훨씬 큰 정치적 힘을 가지고 있습니다.\n\n이것이 지지 기반을 잃는 것을 막기에 충분할지, 아니면 정치에서 신의 우위가 끝날지는 시간만이 말해줄 것입니다..."
-holst.7.a:0 "United in faith."
+holst.7.a:0 "믿음 속에서 통합."
 
 holst.8.t:0 "자유주의의 위기"
 holst.8.d:0 "네덜란드에서 자유주의는 위협받고 있습니다. 가장 큰 진보 정당인 전통주의 LSP는 최근 몇년간 꾸준히 입지를 잃어 왔습니다. 기존 체제의 실패에 환멸을 느낀 많은 당원들이 VNH의 급진국가주의 쪽으로 발길을 돌리고 있으며 이제 CNA와 같은 거대한 권력 집단의 조짐도 보이고 있습니다. 이로인해 다른 정당보다 훨씬 느린 속도로 당원을 잃고 있는 좌익 성향의 VDB가 국내 최대의 진보 정당이 되었습니다.\n\n올해 그들이 선거에서 이길 가능성은 거의 없지만, LSP는 그들이 보수적이고 갈수록 권위적으로 변하는 CNA에 비해 온건하고 믿을만한 대안으로 보여지기를 기대하고 있습니다."
 holst.8.a:0 "힘든 시기지만, 자유주의의 횃불은 아직 꺼지지 않았다."
 
 holst.9.t:0 "급진 좌파의 부상"
-holst.9.d:0 "SDAP의 공동창당자 P.J. 트룰스트라가 1918년 네덜란드 공화국을 세우려다 실패한 후, 그들의 동지인 SDAP의 온건파가 미적지근하게 반응하자 더 급진적인 혁명분자들은 더 뜻이 맞는 단체에서 구체제를 전복시키겠다는 희망을 쫓기위해 사회민주주의자들을 버렸습니다.\n\nSDAP가 약간 우파로 기운 것은 스스로를 트룰스트라의 후계자로 보고 체제를 전복시키기 위해 체제 안에 있는 상대적으로 작은 정당인 혁명사회노동당(RSAP) 내 그들의 급진적인 상대를 대담하게 만들었을 뿐입니다. \n\nEven further to the left, and outside the realm of conventional parliamentary politics, the Nationaal Arbeids-Secretariaat, or NAS, is the primary syndicalist labour organisation in the Netherlands, seeking to replace the old system in its entirety and restructure it according to the French model, with tacit support from Paris.\n\nIn many ways similar, the council communists and their election-boycotting KAPD rally behind the astronomer and Marxist theorist Anton Pannekoek.\n\nThere are even some for whom the syndicalist/council-communist approach is too conservative; the 'Patriotten', authoritarian socialists led by David Wijnkoop and Paul de Groot, see themselves as the guardians of the revolution, claiming to intend to keep it away from its tendency of falling to a new 'elitism'. Many of their ideas are consistent with the ideology the Internationale recently codified as Vanguardism.\n\nWith all these factions vying for the chance to leave their own mark on the history of the Netherlands, the parliamentary democratic system is well and truly under siege from the left."
-holst.9.a:0 "More radical leftists? Good Lord!"
+holst.9.d:0 "SDAP의 공동창당자 P.J. 트룰스트라가 1918년 네덜란드 공화국을 세우려다 실패한 후, 그들의 동지인 SDAP의 온건파가 미적지근하게 반응하자 더 급진적인 혁명분자들은 더 뜻이 맞는 단체에서 구체제를 전복시키겠다는 희망을 쫓기위해 사회민주주의자들을 버렸습니다.\n\nSDAP가 약간 우파로 기운 것은 스스로를 트룰스트라의 후계자로 보고 체제를 전복시키기 위해 체제 안에 있는 상대적으로 작은 정당인 혁명사회노동당(RSAP) 내 그들의 급진적인 상대를 대담하게 만들었을 뿐입니다. \n\n더 나아가 전통적인 의회 정치의 영역 밖에서도, 혁명사회노동당, 또는 NAS는 네덜란드의 주요 생디칼리즘 노동 단체이며 파리의 암묵적인 지원과 함께 구체제를 전부 대체하고 프랑스 모델에 따라 재구성하려고 합니다.\n\n많은 면에서 비슷하게, 의회공산주의자들과 선거를 거부하는 KAPD는 천문학자이자 마르크스주의 이론가인 안토니 파네쿡을 지지합니다.\n\n심지어 일부에서는 생디칼리즘/의회공산주의적 접근이 너무 보수적이라고 생각하는 사람들도 있습니다. '애국당', 다비드 빈쿠프와 파울 드 흐로트가 이끄는 권위사회주의자들은 자신들을 혁명의 수호자로 여기며 새로운 '엘리트 주의'로 전락하는 경향을 막으려고 합니다. 그들의 생각 중 많은 것들이 최근 인터네셔널에서 전위 사상 구분된 사상과 일치합니다.\n\n이 모든 파벌들이 네덜란드 역사에 자신의 발자취를 남길 수 있는 기회를 놓고 경쟁하고 있는 가운데, 의회민주주의 체제는 완전히 그리고 진정으로 좌파에서부터 공격을 받고 있습니다."
+holst.9.a:0 "더 급진적인 좌파라고? 맙소사!"
 
 holst.10.t:0 "란트바흐트의 형성"
-holst.10.d:0 "In the wake of the Jordaan Riot, the police very rapidly found out that the black-shirted youths who were laying into the crowd of protesters, and who disappeared the moment the soldiers turned up, were more than just random thugs. These figures represent the first public appearance of the Landwacht, a paramilitary organisation set up by the VNH, supposedly led directly by Cornelis van Geelkerken himself.\n\nSince the Jordaan, the Landwacht has popped up all over the country, standing watch at VNH rallies and assemblies, disrupting meetings of left-wing organisations, and occasionally fighting in the streets against their syndicalist counterparts, the Nationale Rode Front, or 'Red Front'. Their disciplined, militaristic marches through the streets of major cities draw large crowds, and drum up more recruits, especially among the youth.\n\nThe Landwacht is rapidly becoming a force to be reckoned with, and their numbers are still expanding - it's unlikely they'll stay silent during the elections..."
-holst.10.a:0 "Mijn hemel!"
+holst.10.d:0 "요르단 폭동의 결과, 경찰은 시위자들의 무리 속에 있다가 군인들이 나타나는 순간 사라진 검은 셔츠 젊은이들이 단순한 폭력배들이 아니라는 것을 재빨리 알아냈습니다. 이는 아마도 코르넬리스 판 힐켈크가 직접 이끌고 VNH가 설립한 군군사 조직인 란트바흐트의 첫 공개 모습을 보여줍니다.\n\n요르단 이래, 란트바흐트는 전국적으로 나타났고, VNH 집회에 서서 망을 보고, 좌익 단체들의 회의를 방해하고, 때로는 그들의 생디칼리스트 상대인 민족 붉은 전선 또는 ' 붉은 전선'과 싸움을 벌였습니다. 그들은 주요 도시들의 거리를 통과하는 훈련되고, 군국주의적인 행진을 통해 많은 군중을 끌어 모으고, 특히 젊은이들 사이에서 더 많은 신입들을 끌어 모읍니다.\n\n란트바흐트는 빠르게 무시할 수 없는 세력이 되어가고 있고, 그 수는 여전히 늘어나고 있습니다 - 선거 기간 동안 그들이 침묵할 가능성은 낮습니다...."
+holst.10.a:0 "맙소사!"
 
 holst.11.t:0 "The Death of Van Gybland Oosterhoff"
 holst.11.d:0 "The leader of the ultra-nationalist VNH, Van Gybland Oosterhoff, died today in his home in Amsterdam.\n\nHis last few years had seen a rapid rise in fortunes of the VNH, brought on by the economic struggles facing many in the country, fear of Syndicalism and disillusionment with democracy. However, the party he leaves behind is highly divided itself between the young, newer members of the party lead by Cornelis van Geelkerken and the older, more established segment possessing ties to the Dutch military and bureaucracy in the hands of H.N.A. Swart.\n\nSwart has been named the new party leader with van Geelkerken his deputy, and the pair look set to challenge the established parties for control of the Hague in the May elections - provided the two wings can keep working together."
 holst.11.a:0 "We must be careful with them..."
 
 holst.12.t:0 "네덜란드의 사회 불안"
-holst.12.d:0 "The past few months have seen the growth of violent confrontations between the paramilitary bands of both the left and the right, with streetfights an almost daily occurance in the larger cities. Strikes are commonplace, with either the police or the Landwacht's 'Blackshirts' breaking the strikers' pickets. The police have failed to keep order, with the army often having to offer support, but this has only served to increase dissent and further civil disobedience. If the situation continues to escalate, the elections in May look set to be the most contentious in living memory."
-holst.12.a:0 "Bloody thugs!"
+holst.12.d:0 "지난 몇달 동안 좌파와 우파의 준군사 조직 간 충돌이 증가해 왔고, 대도시에서는 총격전이 거의 매일 일어나고 있습니다. 파업과 이에 따라 경찰이나 란트바흐트의 '검은 셔츠'가 파업 참가자들의 피켓을 부수는 일은 흔한 일입니다. 경찰은 질서 유지에 실패하였으며 군대는 지원을 제안했지만, 이는 반대 의견을 증가시키고 더 나아가 시민 불복종 운동을 일으켰습니다. 상황이 계속 악화된다면 5월의 선거는 현존하는 사람들의 기억 속에서 가장 논란이 많을 것입니다."
+holst.12.a:0 "빌어먹을 폭력배들!"
 
 holst.13.t:0 "즈볼러 대학살"
-holst.13.d:0 "A socialist rally outside Zwolle, organised by local council communists, ended in tragedy, as one of the strikers threw a bomb into the midst of the police, who were trying to disperse the crowds. Four policemen died, and the police immediately returned fire on the crowd, killing two dozen strikers.\n\nAt dawn the next morning, the police, openly backed up by the local chapter of the Landwacht, arrested local socialist leaders en masse, including the nephew of Henk Sneevliet, founder and leader of the RSAP.\n\nThese actions have elicited further protests throughout the country, and even the VDB is calling on Prime Minister Colijn to publicly condemn what they refer to as 'illegal detentions'."
-holst.13.a:0 "The police did well in rounding up the troublemakers so quickly."
-holst.13.b:0 "These people are innocent, and must be released at once!"
+holst.13.d:0 "지방의회 공산주의자들이 조직한 즈볼러 외곽에서의 사회주의 집회는, 군중을 해산시키려는 시위자들 중 한명이 경찰 가운데에 폭탄을 던져 비극으로 끝났습니다. 경찰관 4명이 사망했고 경찰은 즉시 군중에게 총격을 가해 24명의 시위자가 사망했습니다.\n\n다음날 새벽, 란트바흐트의 지역 지부의 공개적인 지원을 받은 경찰은 RSAP의 설립자이자 지도자인 헹 스니블리트의 조카를 포함한 지역 사회주의 지도자들을 집단으로 체포했습니다.\n\n이러한 조치는 전국적으로 더 많은 항의를 불러 일으켰고 심지어 VDB도 콜렝 총리에게 소위 '불법 구금'을 공개적으로 비난할 것을 요구하고 있습니다."
+경찰은 문제아들을 너무 빨리 검거했다."
+holst.13.b:0 "이 사람들은 결백하며, 당장 석방되어야 한다!"
 
 holel.1.t:0 "네덜란드 선거"
-holel.1.d:0 "암스테르담과 즈볼러에서의 사건이 사람들의 기억 속에 생생하게 남아있는 가운데 올해 총선은 치열하게 치러질 것입니다. 경찰은 잠재적인 말썽꾼을 막기 위해 최선을 다하고 있습니다.\n\n거대 세력인 CNA는 현재 의회에서 가장 강력한 위치에 있지만, 기둥은 무너지기 직전이며 좌우 가릴 것 없이 지지자들이 빠져나가는 것을 볼 때, 투표함이 열렸을 때 CNA가 이길 지는 의문입니다. 하지만 좌익 자유주의자와 온건 사회민주주의자의 조합인 Lijst Links는 운이 좋다면 CNA의 자리를 뺐을 수 있을 정도로 충분히 넓은 지지 기반을 가지고 있습니다. 그리고 급진주의의 유령은 항상 진영 내에서 기다리고 있습니다..."
+holel.1.d:0 "암스테르담과 즈볼러에서의 사건이 사람들의 기억 속에 생생하게 남아있는 가운데 올해 총선은 치열하게 치러질 것입니다. 경찰은 잠재적인 말썽꾼을 막기 위해 최선을 다하고 있습니다.\n\n거대 세력인 CNA는 현재 의회에서 가장 강력한 위치에 있지만, 기둥은 무너지기 직전이며 좌우 가릴 것 없이 지지자들이 빠져나가는 것을 볼 때, 투표함이 열렸을 때 CNA가 이길 지는 의문입니다. 하지만 좌익 자유주의자와 온건 사회민주주의자의 조합인 좌익 연대는 운이 좋다면 CNA의 자리를 뺐을 수 있을 정도로 충분히 넓은 지지 기반을 가지고 있습니다. 그리고 급진주의의 유령은 항상 진영 내에서 기다리고 있습니다..."
 holel.1.a:0 "급진사회주의 RSAP가 승리를 달성했다!"
 
-holel.1.b:0 "Lijst Links가 거대 세력인 CNA를 몰아냈다!"
+holel.1.b:0 "좌익 연대가 거대 세력인 CNA를 몰아냈다!"
 holel.1.c:0 "CNA가 유세를 유지했다."
 holel.1.e:0 "VNH가 다수당이 됐다."
 
 holel.2.t:0 "중도 좌파 내각"
-holel.2.d:0 "The Lijst Links electoral alliance has successfully and soundly defeated the CNA. The increasingly authoritarian stance of the Christian Right has led to a surge in support for the moderate left, and now Colijn and his bloated, oversized party have been sent packing.\n\nHowever, unlike the total monolithic unification of the CNA, Lijst Links was merely an electoral alliance of convenience, and the left-liberals of the VDB and social democrats of the SDAP still retain their separate parties, with their own programmes and ideals. The few half-hearted efforts made towards further unification have been shouted down, and so Lijst Links is no more.\n\nObviously the SDAP was the larger side in this pact, and thus are in a position to choose who they'll work with. Queen Wilhelmina has informed them that she is only willing to give the post of Formateur to a social liberal, thus it's impossible for Albarda to become minister-president without an impasse in forming a new government."
-holel.2.a:0 "VDB-SDAP moderate coalition with Oud as PM."
-holel.2.b:0 "SDAP will work with the RSAP so Albarda becomes PM."
+holel.2.d:0 "좌익 연대는 CNA를 성공적으로 완전히 패배시켰습니다. 기독교 우파의 권위주의적 성향이 온건 좌파에 대한 지지를 급증시켰고, 이제 콜렝과 그의 지나치게 비대해진 정당은 쫓아내졌습니다.\n\n그러나, CNA의 완전한 단일 통합과는 달리 좌익 연대는 단순히 편리한 선거 연합이었으며, VDB의 좌익자유주의자들과 SDAP의 사회민주주의자들은 여전히 자신만의 계획과 이상을 가지고 다른 정당으로 남아있습니다. 통합을 위한 몇가지 성의 없는 노력들은 소리 높여져갔고, 따라서 좌익 연대는 더 이상 없습니다.\n\n분명히 SDAP는 이 연합에서 더 컸으며, 따라서 그들은 누구와 협력할 지 선택할 수 있는 위치에 있습니다. 빌헬미나 여왕은 그들에게 자신은 사회자유주의자에게만 총리 자리를 줄 의향이 있다고 알렸으며, 따라서 새로운 정부를 구성하는데 교착 상태가 없이 알바르다가 총리가 되는 것은 불가능합니다."
+holel.2.a:0 "VDB-SDAP의 온건 연립 정부가 세워지고 아우트가 총리가 된다."
+holel.2.b:0 "SDAP는 RSAP와 일할 것이고 알바르다가 총리가 된다."
 
 holel.3.t:0 "중도 우파 내각"
-holel.3.d:0 "The CNA gamble has paid off! Despite losing a large number of voters, the confessional bloc proved to be large enough to sweep away the opposition. The godless socialists have been thoroughly cowed, and appear to be laying low for the time being. Now the time has come to form the next government, the fourth Colijn cabinet.\n\nMany prominent CNA members are confident that this victory means that the CNA still carries the people's mandate, and should thus form a cabinet by itself - albeit one which is only barely in the majority. However, since our majority is only marginal, any dissent within the party itself could destabilise the cabinet that needs to be sturdy in these roaring times.\n\nDue to our reduced majority, the now-decimated LSP have proposed joining our cabinet to assist us in coalition, and some reactionaries are suggesting that this one electoral victory is not enough to deter the radical leftists. Some senior figures are even floating the idea of cooperating with the VNH in order to use their resources to stamp out the red menace."
-holel.3.a:0 "We'll work with the liberal LSP."
-holel.3.b:0 "Multi-party cabinets are by definition unstable!"
-holel.3.c:0 "The VNH will work."
+holel.3.d:0 "CNA의 도박이 성과를 거두었습니다! 다수의 유권자들을 잃었음에도 불구하고, 그 의회 연합은 반대편을 휩쓸어 버릴 수 있을 만큼 충분히 큰 것으로 증명되었습니다. 경건하지 못한 사회주의자들은 완전히 겁을 먹었고 당분간은 꼼짝도 하지 않을 것으로 보입니다. 이제 다음 정부, 네번째 콜렝 내각을 형성할 때가 되었습니다.\n\n간신히 과반수를 차지했음에도 불구하고 많은 유명 CNA 당원들은 이번 성과가 CNA가 여전히 국민의 권한을 가지고 있다는 것을 의미하며, 따라서 스스로 내각을 구성해야 한다고 확신하고 있습니다. 하지만, 우리의 다수가 단지 근소한 차이에 불과하기 때문에, 당 내부의 어떤 반대도 이런 혼란스러운 시기에 굳건함을 필요로 하는 내각을 불안정하게 만들 수 있습니다.\n\n과반수는 차지했지만 득표율은 감소함에 따라, 현재 고사 직전인 LSP는 우리를 돕기 위해 내각에 합류하는 것을 제안했고, 일부 반동 분자들은 이번 선거의 승리가 충분하지 않다고 말합니다. 심지어 고위 인사들은 붉은 위협을 근절하기 위한 자원을 사용하기 위해 VNH에 협력할 생각까지 내보이고 있습니다."
+holel.3.a:0 "우리는 자유주의적인 LSP와 협력할 것이다."
+holel.3.b:0 "다당 내각은 기본적으로 불안정하다!"
+holel.3.c:0 "VNH는 잘할 것이다."
 
 holel.4.t:0 "VNH가 선거에서 우승하다"
-holel.4.d:0 "In such trying times as these, it's no surprise the people clamour for strong leadership to guide them. The ideals of the VNH have proven to be a strong enough rallying point that we have trounced every one of our adversaries at the ballot box, and now we take upon ourselves the task of stamping out the spectre of international Syndicalism and restoring the Kingdom of the Netherlands to the status it deserves.\n\nThis is not going to be an easy road, however - in addition to the Red menace, the factional party politicians who spend their days chattering away in Parliament will likely be fighting us every step of the way as well for we lack parliamentary majority. We could assuage their concerns and form a proper coalition with the CNA, if only to pacify the public and make the transition easier, or we could could let the Landwacht 'convince' parliament to give us emergency powers."
+holel.4.d:0 "이런 힘든 시기에, 사람들이 그들을 지도해 줄 강력한 지도력을 요구하는 것은 놀랄 일이 아닙니다. VNH의 이상은 우리가 모든 적들을 투표함에서 완파할 수 있을 정도로 충분히 강력한 구심점임이 입증되었으며, 이제 우리는 국제 생디칼리즘의 유령을 근절하고 네덜란드 왕국을 마땅한 수준으로 복원하는 과제를 떠맡고 있습니다.\n\n그러나 이것은 쉽지 않은 길입니다 - 붉은 위협 외에도 우리는 의회의 과반수를 충족하기 못 했기에 의회에서 하루종일 떠들는 파벌 정치인들과 매 단계마다 싸워야 할 것입니다. 국민들의 마음을 진정시키고 좀 더 수월하게 변화시키기 위해 CNA와 적절한 연정을 형성할 수 있습니다. 또는 란트바흐트가 의회를 '설득'하도록 해 우리에게 비상권을 넘기도록 할 수도 있습니다."
 holel.4.a:0 "CNA와 연정을 만들어라."
 holel.4.b:0 "란트바흐트와 함께 하도록 의회를 '설득'하라."
 
