--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -932,7 +932,7 @@ holel.3.b:0 "다당 내각은 기본적으로 불안정하다!"
 holel.3.c:0 "VNH는 잘할 것이다."
 
 holel.4.t:0 "VNH가 선거에서 우승하다"
-holel.4.d:0 "이런 힘든 시기에, 사람들이 그들을 지도해 줄 강력한 지도력을 요구하는 것은 놀랄 일이 아닙니다. VNH의 이상은 우리가 모든 적들을 투표함에서 완파할 수 있을 정도로 충분히 강력한 구심점임이 입증되었으며, 이제 우리는 국제 생디칼리즘의 유령을 근절하고 네덜란드 왕국을 마땅한 수준으로 복원하는 과제를 떠맡고 있습니다.\n\n그러나 이것은 쉽지 않은 길입니다 - 붉은 위협 외에도 우리는 의회의 과반수를 충족하기 못 했기에 의회에서 하루종일 떠들는 파벌 정치인들과 매 단계마다 싸워야 할 것입니다. 국민들의 마음을 진정시키고 좀 더 수월하게 변화시키기 위해 CNA와 적절한 연정을 형성할 수 있습니다. 또는 란트바흐트가 의회를 '설득'하도록 해 우리에게 비상권을 넘기도록 할 수도 있습니다."
+holel.4.d:0 "이런 힘든 시기에, 사람들이 그들을 지도해 줄 강력한 지도력을 요구하는 것은 놀랄 일이 아닙니다. VNH의 이상은 우리가 모든 적들을 투표함에서 완파할 수 있을 정도로 충분히 강력한 구심점임이 입증되었으며, 이제 우리는 국제 생디칼리즘의 유령을 근절하고 네덜란드 왕국을 마땅한 수준으로 복원하는 과제를 떠맡고 있습니다.\n\n그러나 이것은 쉽지 않은 길입니다 - 붉은 위협 외에도 우리는 의회의 과반수를 충족하기 못 했기에 의회에서 하루종일 떠드는 파벌 정치인들과 매 단계마다 싸워야 할 것입니다. 국민들의 마음을 진정시키고 좀 더 수월하게 변화시키기 위해 CNA와 적절한 연정을 형성할 수 있습니다. 또는 란트바흐트가 의회를 '설득'하도록 해 우리에게 비상권을 넘기도록 할 수도 있습니다."
 holel.4.a:0 "CNA와 연정을 만들어라."
 holel.4.b:0 "란트바흐트와 함께 하도록 의회를 '설득'하라."
 
