--- a/Kaiserreich Korean Translation/localisation/KR_Danubian_Federation_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Danubian_Federation_l_english.yml
@@ -1,16 +1,16 @@
 l_english:
 
 ### Parties ###
-DNF_totalist_party:0 "TVP"
-DNF_radical_socialist_party:0 "SAB"
-DNF_syndicalist_party:0 "SAPÖ"
-DNF_social_democrat_party:0 "SDA"
-DNF_social_liberal_party:0 "LBÖ"
-DNF_market_liberal_party:0 "ÖLP"
-DNF_social_conservative_party:0 "LBÖ"
-DNF_authoritarian_democrat_party:0 "CSP"
-DNF_paternal_autocrat_party:0 "GDVP"
-DNF_national_populist_party:0 "HB"
+DNF_totalist_party:0 "전체주의 인민당"
+DNF_radical_socialist_party:0 "사회주의 노동당"
+DNF_syndicalist_party:0 "오스트리아 사회주의 노동자당"
+DNF_social_democrat_party:0 "오스트리아 사회 민주당"
+DNF_social_liberal_party:0 "오스트리아 진보 운동"
+DNF_market_liberal_party:0 "오스트리아 자유당"
+DNF_social_conservative_party:0 "오스트리아 보수당"
+DNF_authoritarian_democrat_party:0 "기독교사회당"
+DNF_paternal_autocrat_party:0 "대독일인민당"
+DNF_national_populist_party:0 "조국전선"
 DNF_totalist_party_long:0 "전체주의 인민당"
 DNF_radical_socialist_party_long:0 "사회주의 노동당"
 DNF_syndicalist_party_long:0 "오스트리아 사회주의 노동자당"
