--- a/Kaiserreich Korean Translation/localisation/KR_Germany_In_Exile_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_In_Exile_l_english.yml
@@ -1,29 +1,29 @@
 ﻿l_english:
 
 ### Parties ###
-GEX_totalist_party:0 "RAM"
+GEX_totalist_party:0 "적군 민병대"
 GEX_totalist_party_long:0 "적군 민병대"
-GEX_radical_socialist_party:0 "BGB"
+GEX_radical_socialist_party:0 "무장 노동조합 총연맹"
 GEX_radical_socialist_party_long:0 "무장 노동조합 총연맹"
-GEX_syndicalist_party:0 "DOI/SP"
+GEX_syndicalist_party:0 "인터내셔널 독일 지부/생디칼리스트 당"
 GEX_syndicalist_party_long:0 "인터내셔널 독일 지부/생디칼리스트 당"
-GEX_social_democrat_party:0 "SPD"
+GEX_social_democrat_party:0 "독일 사회 민주당"
 GEX_social_democrat_party_long:0 "독일 사회 민주당"
-GEX_social_liberal_party:0 "FVP"
+GEX_social_liberal_party:0 "진보 인민당"
 GEX_social_liberal_party_long:0 "진보 인민당"
-GEX_market_liberal_party:0 "NLP"
+GEX_market_liberal_party:0 "국민 자유당"
 GEX_market_liberal_party_long:0 "국민 자유당"
 GEX_social_conservative_party:0 "젠트룸"
 GEX_social_conservative_party_long:0 "중앙당"
-GEX_authoritarian_democrat_party:0 "DKP"
+GEX_authoritarian_democrat_party:0 "독일 보수당"
 GEX_authoritarian_democrat_party_long:0 "독일 보수당"
-GEX_paternal_autocrat_party:0 "DVLP"
+GEX_paternal_autocrat_party:0 "독일 조국당"
 GEX_KAI_paternal_autocrat_party:0 "황제 충성당"
 GEX_AFR_paternal_autocrat_party:0 "비상 정권"
 GEX_paternal_autocrat_party_long:0 "독일 조국당"
 GEX_KAI_paternal_autocrat_party_long:0 "황제 충성 궁정당"
 GEX_AFR_paternal_autocrat_party_long:0 "비상 정부"
-GEX_national_populist_party:0 "AV"
+GEX_national_populist_party:0 "범 독일 연맹"
 GEX_national_populist_party_long:0 "범 독일 연맹"
 
 ### Focuses ###
