--- a/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
@@ -110,23 +110,23 @@ IES_national_populist_DEF:0 "이탈리아 제국"
 ### Parties ###
 SIC_totalist_party:0 "통일 이탈리아"
 SIC_totalist_party_long:0 "통일 이탈리아"
-SIC_syndicalist_party:0 "USM"
+SIC_syndicalist_party:0 "메초조르노 생디칼리스트 연합"
 SIC_syndicalist_party_long:0 "메초조르노 생디칼리스트 연합"
-SIC_radical_socialist_party:0 "ARS"
+SIC_radical_socialist_party:0 "사회주의 개혁주의 동맹"
 SIC_radical_socialist_party_long:0 "사회주의 개혁주의 동맹"
-SIC_social_democrat_party:0 "PDC"
+SIC_social_democrat_party:0 "기독민주당"
 SIC_social_democrat_party_long:0 "기독민주당"
-SIC_social_liberal_party:0 "PL"
+SIC_social_liberal_party:0 "자유당"
 SIC_social_liberal_party_long:0 "자유당"
-SIC_market_liberal_party:0 "PPD"
+SIC_market_liberal_party:0 "대중민주당"
 SIC_market_liberal_party_long:0 "대중민주당"
-SIC_social_conservative_party:0 "DC"
+SIC_social_conservative_party:0 "기독교 민주주의"
 SIC_social_conservative_party_long:0 "기독교 민주주의"
-SIC_authoritarian_democrat_party:0 "PA"
+SIC_authoritarian_democrat_party:0 "농민당"
 SIC_authoritarian_democrat_party_long:0 "농민당"
 SIC_paternal_autocrat_party:0 "부르봉 나폴리 왕조"
 SIC_paternal_autocrat_party_long:0 "부르봉 나폴리 왕조"
-SIC_national_populist_party:0 "IDS"
+SIC_national_populist_party:0 "시칠리아 통합주의"
 SIC_national_populist_party_long:0 "시칠리아 통합주의"
 
 ### Cosmetic Tags ###
