--- a/Kaiserreich Korean Translation/localisation/KR_Socialist_Republic_of_Italy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Socialist_Republic_of_Italy_l_english.yml
@@ -7,20 +7,20 @@ SRI_syndicalist_party:0 "생디칼리즘 연맹"
 SRI_syndicalist_party_long:0 "생디칼리즘 연맹"
 SRI_radical_socialist_party:0 "기독교 사회주의 연맹"
 SRI_radical_socialist_party_long:0 "기독교 사회주의 연맹"
-SRI_social_democrat_party:0 "LDR"
-SRI_social_democrat_party_long:0 "Lega Democratica Riformista"
-SRI_social_liberal_party:0 "PLD"
-SRI_social_liberal_party_long:0 "Partito Liberale Democratico"
-SRI_market_liberal_party:0 "PLI"
-SRI_market_liberal_party_long:0 "Partito Liberale Italiano"
-SRI_social_conservative_party:0 "PPI"
-SRI_social_conservative_party_long:0 "Partito Popolare Italiano"
-SRI_authoritarian_democrat_party:0 "PMP"
-SRI_authoritarian_democrat_party_long:0 "Partito Monarchico Popolare"
-SRI_paternal_autocrat_party:0 "Lega Monarchica"
-SRI_paternal_autocrat_party_long:0 "Lega Monarchica"
-SRI_national_populist_party:0 "ANI"
-SRI_national_populist_party_long:0 "Associazione Nazionalista Italiana"
+SRI_social_democrat_party:0 "민주개혁 연맹"
+SRI_social_democrat_party_long:0 "민주개혁 연맹"
+SRI_social_liberal_party:0 "자유민주당"
+SRI_social_liberal_party_long:0 "자유민주당"
+SRI_market_liberal_party:0 "이탈리아 자유당"
+SRI_market_liberal_party_long:0 "이탈리아 자유당"
+SRI_social_conservative_party:0 "이탈리아 민중당"
+SRI_social_conservative_party_long:0 "이탈리아 민중당"
+SRI_authoritarian_democrat_party:0 "민중근왕당"
+SRI_authoritarian_democrat_party_long:0 "민중근왕당"
+SRI_paternal_autocrat_party:0 "왕당파 연맹"
+SRI_paternal_autocrat_party_long:0 "왕당파 연맹"
+SRI_national_populist_party:0 "이탈리아 민족 연합"
+SRI_national_populist_party_long:0 "이탈리아 민족 연합"
 
 ### Opinion Modifiers ###
 SRI_did_not_listen_FRA:0 "이탈리아가 우리의 충고를 무시했다."
