--- a/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
@@ -134,26 +134,26 @@ NEE_general_strike_malus:0 "New England General Strike"
 NEE_worker_benefits:0 "Workers Benefits"
 
 ### Parties ###
-NEE_totalist_party:0 "NECP"
-NEE_totalist_party_long:0 "New England Communist Party"
-NEE_radical_socialist_party:0 "CSNE"
-NEE_radical_socialist_party_long:0 "Combined Syndicates of New England"
-NEE_syndicalist_party:0 "CSNE"
-NEE_syndicalist_party_long:0 "Combined Syndicates of New England"
-NEE_social_democrat_party:0 "Labor Party"
-NEE_social_democrat_party_long:0 "New England Labor Party"
-NEE_social_liberal_party:0 "Progressive Party"
-NEE_social_liberal_party_long:0 "New England Progressive Party"
-NEE_market_liberal_party:0 "Yankee Party"
-NEE_market_liberal_party_long:0 "Yankee Party"
-NEE_social_conservative_party:0 "Federalist Party"
-NEE_social_conservative_party_long:0 "Federalist Party"
-NEE_authoritarian_democrat_party:0 "Military Junta"
-NEE_authoritarian_democrat_party_long:0 "Military Junta"
-NEE_paternal_autocrat_party:0 "NEFP"
-NEE_paternal_autocrat_party_long:0 "New England First Party"
-NEE_national_populist_party:0 "NEFP"
-NEE_national_populist_party_long:0 "New England First Party"
+NEE_totalist_party:0 "뉴잉글랜드 공산당"
+NEE_totalist_party_long:0 "뉴잉글랜드 공산당"
+NEE_radical_socialist_party:0 "뉴잉글랜드 노동 연맹"
+NEE_radical_socialist_party_long:0 "뉴잉글랜드 노동 연맹"
+NEE_syndicalist_party:0 "뉴잉글랜드 노동 연맹"
+NEE_syndicalist_party_long:0 "뉴잉글랜드 노동 연맹"
+NEE_social_democrat_party:0 "노동당"
+NEE_social_democrat_party_long:0 "뉴잉글랜드 노동당"
+NEE_social_liberal_party:0 "진보당"
+NEE_social_liberal_party_long:0 "뉴잉글랜드 진보당"
+NEE_market_liberal_party:0 "양키당"
+NEE_market_liberal_party_long:0 "양키당"
+NEE_social_conservative_party:0 "연방당"
+NEE_social_conservative_party_long:0 "연방당"
+NEE_authoritarian_democrat_party:0 "군사 평의회"
+NEE_authoritarian_democrat_party_long:0 "군사 평의회"
+NEE_paternal_autocrat_party:0 "뉴잉글랜드 우선당"
+NEE_paternal_autocrat_party_long:0 "뉴잉글랜드 우선당"
+NEE_national_populist_party:0 "뉴잉글랜드 우선당"
+NEE_national_populist_party_long:0 "뉴잉글랜드 우선당"
 
 ### Opinion Modifiers ###
 NECAN:0 "New England Join's the Entente"
