--- a/Kaiserreich Korean Translation/localisation/KR_Sardinia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Sardinia_l_english.yml
@@ -31,21 +31,21 @@ SRD_social_cons_party_long:0 "Democrazia Cristiana"
 SRD_social_cons_party:0 "Democrazia Cristiana"
 
 ### Cosmetic Tags ###
-SRD_ITA_social_democrat:0 "Kingdom of Italy"
-SRD_ITA_social_liberal:0 "Kingdom of Italy"
-SRD_ITA_market_liberal:0 "Kingdom of Italy"
-SRD_ITA_social_conservative:0 "Kingdom of Italy"
-SRD_ITA_authoritarian_democrat:0 "Kingdom of Italy"
-SRD_ITA_paternal_autocrat:0 "Kingdom of Italy"
-SRD_ITA_national_populist:0 "Kingdom of Italy"
+SRD_ITA_social_democrat:0 "이탈리아 왕국"
+SRD_ITA_social_liberal:0 "이탈리아 왕국"
+SRD_ITA_market_liberal:0 "이탈리아 왕국"
+SRD_ITA_social_conservative:0 "이탈리아 왕국"
+SRD_ITA_authoritarian_democrat:0 "이탈리아 왕국"
+SRD_ITA_paternal_autocrat:0 "이탈리아 왕국"
+SRD_ITA_national_populist:0 "이탈리아 왕국"
 
-SRD_piedmont_social_democrat:0 "Sardinia-Piedmont"
-SRD_piedmont_social_liberal:0 "Sardinia-Piedmont"
-SRD_piedmont_market_liberal:0 "Sardinia-Piedmont"
-SRD_piedmont_social_conservative:0 "Sardinia-Piedmont"
-SRD_piedmont_authoritarian_democrat:0 "Sardinia-Piedmont"
-SRD_piedmont_paternal_autocrat:0 "Sardinia-Piedmont"
-SRD_piedmont_national_populist:0 "Sardinia-Piedmont"
+SRD_piedmont_social_democrat:0 "사르데냐-피에몬테"
+SRD_piedmont_social_liberal:0 "사르데냐-피에몬테"
+SRD_piedmont_market_liberal:0 "사르데냐-피에몬테"
+SRD_piedmont_social_conservative:0 "사르데냐-피에몬테"
+SRD_piedmont_authoritarian_democrat:0 "사르데냐-피에몬테"
+SRD_piedmont_paternal_autocrat:0 "사르데냐-피에몬테"
+SRD_piedmont_national_populist:0 "사르데냐-피에몬테"
 
 
 
