--- a/Kaiserreich Korean Translation/localisation/KR_German_Union_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_German_Union_l_english.yml
@@ -1,23 +1,23 @@
 ﻿l_english:
 
 ### Parties ###
-GRU_totalist_party:0 "SE"
+GRU_totalist_party:0 "사회주의 통일당"
 GRU_totalist_party_long:0 "사회주의통일당"
-GRU_radical_socialist_party:0 "FAUD"
+GRU_radical_socialist_party:0 "독일자유노동자동맹"
 GRU_radical_socialist_party_long:0 "독일자유노동자동맹"
 GRU_syndicalist_party:0 "스파르타키즈"
-GRU_syndicalist_party_long:0 ""
-GRU_social_democrat_party:0 "CZU"
+GRU_syndicalist_party_long:0 "스파르타키즈"
+GRU_social_democrat_party:0 "기독교사회연합"
 GRU_social_democrat_party_long:0 "기독교사회연합"
-GRU_social_liberal_party:0 "CDU"
+GRU_social_liberal_party:0 "기독교민주연합"
 GRU_social_liberal_party_long:0 "기독교민주연합"
-GRU_market_liberal_party:0 "FDP"
+GRU_market_liberal_party:0 "자유민주당"
 GRU_market_liberal_party_long:0 "자유민주당"
-GRU_social_conservative_party:0 "FV"
+GRU_social_conservative_party:0 "자유 연합"
 GRU_social_conservative_party_long:0 "자유 연합"
-GRU_authoritarian_democrat_party:0 "DKP"
+GRU_authoritarian_democrat_party:0 "독일 보수당"
 GRU_authoritarian_democrat_party_long:0 "독일 보수당"
-GRU_paternal_autocrat_party:0 "DVLP"
+GRU_paternal_autocrat_party:0 "독일 조국당"
 GRU_paternal_autocrat_party_long:0 "독일 조국당"
-GRU_national_populist_party:0 "AV"
+GRU_national_populist_party:0 "범독일연맹"
 GRU_national_populist_party_long:0 "범독일연맹"
