--- a/Kaiserreich Korean Translation/localisation/KR_Hawaii_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Hawaii_l_english.yml
@@ -147,11 +147,11 @@ HAW_japanese_tech_sharing:0 "이학연구소에 합류"
 HAW_japanese_tech_sharing_desc:0 "Now that we are full and respected members of the Greater East Asian Co-Prosperity Sphere we should look at joining the Rikagaku Kenkyūsho, the scientific wing of the Co-Prosperity Sphere. This will let us add our small part to the scientific knowledge of East Asia."
 
 ### Parties ###
-HAW_totalist_party:0 "HCP"
+HAW_totalist_party:0 "하와이 공산당"
 HAW_totalist_party_long:0 "하와이 공산당"
-HAW_syndicalist_party:0 "PWU"
+HAW_syndicalist_party:0 "파인애플 노동자 연맹"
 HAW_syndicalist_party_long:0 "파인애플 노동자 연맹"
-HAW_radical_socialist_party:0 "CSH"
+HAW_radical_socialist_party:0 "하와이 노동 연맹"
 HAW_radical_socialist_party_long:0 "하와이 노동 연맹"
 HAW_social_democrat_party:0 "진보당"
 HAW_social_democrat_party_long:0 "하와이 진보당"
@@ -163,10 +163,10 @@ HAW_social_conservative_party:0 "국민당"
 HAW_social_conservative_party_long:0 "하와이 국민당"
 HAW_authoritarian_democrat_party:0 "군사 위원회"
 HAW_authoritarian_democrat_party_long:0 "군사 위원회"
-HAW_paternal_autocrat_party:0 "HFP"
-HAW_paternal_autocrat_party_long:0 "하와이 제일당"
-HAW_national_populist_party:0 "HFP"
-HAW_national_populist_party_long:0 "하와이 제일당"
+HAW_paternal_autocrat_party:0 "하와이 우선당"
+HAW_paternal_autocrat_party_long:0 "하와이 우선당"
+HAW_national_populist_party:0 "하와이 우선당"
+HAW_national_populist_party_long:0 "하와이 우선당"
 
 ### Ideas ###
 HAW_people_victory:0 "하와이 혁명"
