--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -909,7 +909,7 @@ holst.12.a:0 "빌어먹을 폭력배들!"
 
 holst.13.t:0 "즈볼러 대학살"
 holst.13.d:0 "지방의회 공산주의자들이 조직한 즈볼러 외곽에서의 사회주의 집회는, 군중을 해산시키려는 시위자들 중 한명이 경찰 가운데에 폭탄을 던져 비극으로 끝났습니다. 경찰관 4명이 사망했고 경찰은 즉시 군중에게 총격을 가해 24명의 시위자가 사망했습니다.\n\n다음날 새벽, 란트바흐트의 지역 지부의 공개적인 지원을 받은 경찰은 RSAP의 설립자이자 지도자인 헹 스니블리트의 조카를 포함한 지역 사회주의 지도자들을 집단으로 체포했습니다.\n\n이러한 조치는 전국적으로 더 많은 항의를 불러 일으켰고 심지어 VDB도 콜렝 총리에게 소위 '불법 구금'을 공개적으로 비난할 것을 요구하고 있습니다."
-경찰은 문제아들을 너무 빨리 검거했다."
+holst.13.a:0 "경찰은 문제아들을 너무 빨리 검거했다."
 holst.13.b:0 "이 사람들은 결백하며, 당장 석방되어야 한다!"
 
 holel.1.t:0 "네덜란드 선거"
